--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16.x
           cache: 'npm'
-          cache-dependency-path: package-lock.json
+          cache-dependency-path: yarn.json
       - name: Build
         run: npm install && npm run build
 
