--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,22 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: 16.x
-          cache: 'npm'
-          cache-dependency-path: yarn.json
-      - name: Build
-        run: npm install && npm run build
+      - run: npm install && npm run build
+      - run: npm run build
 
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy
-        uses: nwtgck/actions-netlify@v2.0
-        with:
-          publish-dir: './build'
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+#  deploy:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Deploy
+#        uses: nwtgck/actions-netlify@v2.0
+#        with:
+#          publish-dir: './build'
+#        env:
+#          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+#          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
