--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,17 +8,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
-      - run: npm install
-      - run: npm run build
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+      - name: Build
+        run: npm install && npm run build
       - name: Deploy
         uses: nwtgck/actions-netlify@v2.0
         with:
