--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
+      - name: Set up
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
       - name: Build
